--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1418,7 +1418,7 @@ headerbar {
     }
   }
 
-  separator, separator:backdrop { background-color: $dark_bg_color; }
+  separator, separator:backdrop { background-color: transparent; }
 }
 
 // Headerbar widgets
@@ -3761,7 +3761,7 @@ headerbar,
 
         @if $b==close {
           background-color: $close_button;
-          box-shadow: $shadow_normal;
+          box-shadow: if($darker=='true' or $variant=='dark', $shadow_normal, none);
           // FIXME Maybe. Increase the click area of the button to make better use of Fitt's law.
           // Will need to redo the assets, using a bg-color doesn't work with this "hack"
           //margin: 0 -4px 0 0;
@@ -3792,8 +3792,9 @@ headerbar,
     // Load png assets for each button
     @each $k in ('close', 'maximize', 'minimize') {
       @each $l, $m in ('',''), (':backdrop','-backdrop'), (':hover','-hover'), (':active','-hover') 
-      { &.#{$k}#{$l} { background-image: -gtk-scaled(url('assets/titlebutton-#{$k}#{$m}.png'),
-                                                     url('assets/titlebutton-#{$k}#{$m}@2.png')); }
+      { &.#{$k}#{$l} {
+        background-image: -gtk-scaled(url('assets/titlebutton-#{$k}#{$m}.png'),
+                                      url('assets/titlebutton-#{$k}#{$m}@2.png')); }
       }
     }
   }
