--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -261,7 +261,12 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
       background-color: transparent;
       @include edges(disabled);
     }
-    @else { @include button(normal); }
+    @else {
+      @include button(normal);
+      border-width: 0;
+      box-shadow: none;
+      background-color: transparent;
+    }
   }
   @else if $t==headerbutton-hover {
   // hovered header button
@@ -270,7 +275,10 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
       background-color: lighten($dc, 18%);
       @include edges(hover);
     }
-    @else { @include button(hover); }
+    @else { 
+      @include button(hover);
+      &:hover:backdrop:not(.titlebutton) { color: $fg_color; }
+    }
   }
   @else if $t==headerbutton-active {
   // active header button
@@ -279,7 +287,10 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
       background-color: darken($dc, 8%);
       @include edges(active-dark);
     }
-    @else { @include button(active); }
+    @else {
+      @include button(active);
+      border-width: 1px;
+    }
   }
   @else if $t==headerbutton-hoveractive {
   // active hovered header button
@@ -288,7 +299,10 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
       background-color: darken($dc, 12%);
       @include edges(active-dark);
     }
-    @else { @include button(hoveractive); }
+    @else { 
+      @include button(hoveractive);
+      &:hover:backdrop { color: $fg_color; }
+    }
   }
   @else if $t==headerbutton-focus {
   // focus header button
