--- a/gtk-3.0/_apps.scss
+++ b/gtk-3.0/_apps.scss
@@ -5,15 +5,18 @@
   border: none;
   background-color: transparent;
   box-shadow: none;
+  transition-duration: $shortest_duration;
 
   &:hover {
     color: $dark_fg_color;
-    background-color: lighten($dark_bg_color, 4%);
+    background-color: transparent;
+    box-shadow: inset 0 -2px 0px transparentize(white, 0.4);
   }
   &:active, &:checked {
     color: $dark_fg_color;
-    background-color: lighten($dark_bg_color, 8%);
-    &:hover { background-color: lighten($dark_bg_color, 9%); }
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0 -2px 0px $selected_bg_color;
+    &:hover { background-color: darken($selected_bg_color, 4%); }
   }
 }
 
