--- a/gtk-3.0/_colors.scss
+++ b/gtk-3.0/_colors.scss
@@ -78,7 +78,7 @@ $secondary_bg_color: mix($bg_color, $base_color, 50%);
 $secondary_borders_color: darken($secondary_bg_color, 8%);
 
 //title buttons
-$close_button: transparentize($selected_bg_color, 0.4); //#b55f5f;
-$close_button_hover: $selected_bg_color; //lighten($close_button, 5%);
+$close_button: if($darker=='true' or $variant=='dark', transparentize($selected_bg_color, 0.4), #b55f5f);
+$close_button_hover: if($darker=='true' or $variant=='dark', $selected_bg_color, lighten($close_button, 5%));
 $close_button_backdrop: lighten($dark_bg_color, 12%);
 $max_min_hover: if($darker=='true' or $variant=='dark', lighten($dark_bg_color, 12%), $borders_color);
