--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1790,20 +1790,20 @@ menubar,
 .menubar {
   -GtkWidget-window-dragging: true;
   padding: 0px;
-  background-color: $dark_bg_color;
+  background-color: if($darker=='true' or $variant=='dark', $dark_bg_color, $bg_color);
 
   > menuitem {
     min-height: 16px;
     padding: 2px 8px;
     border: 0;
     border-color: transparent;
-    color: $selected_fg_color;
+    color: if($darker=='true' or $variant=='dark', $dark_fg_color, $fg_color);
 
     &:hover, &:active { //Seems like it :hover even with keyboard focus
-      box-shadow: inset 0 -2px $selected_bg_color;
+      box-shadow: if($darker=='true' or $variant=='dark', inset 0 -2px $selected_bg_color, none);
       color: $selected_fg_color;
       border-radius: 0;
-      background-color: lighten($dark_bg_color, 14%);
+      background-color: if($darker=='true' or $variant=='dark', lighten($dark_bg_color, 14%), $selected_bg_color);
     }
 
     &:backdrop { color: $backdrop_fg_color; }
