--- a/gtk-3.0/gtk.scss
+++ b/gtk-3.0/gtk.scss
@@ -5,7 +5,7 @@
 // - if you need to inverse a color function use the @if directive to match for dark $variant
 
 $variant: 'light';
-$darker: 'true'; // For a darker headerbar
+$darker: 'false'; // For a darker headerbar
 
 @import 'colors';
 @import 'variables';
