--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -1418,7 +1418,10 @@ headerbar {
     }
   }
 
-  separator, separator:backdrop { background-color: transparent; }
+  separator {
+    background-color: transparent;
+    &:backdrop { @include headerbar_fill; }
+  }
 }
 
 // Headerbar widgets
@@ -3961,7 +3964,6 @@ stackswitcher button.text-button.circular { // FIXME aggregate with buttons
   -gtk-icon-shadow: 0 2px 12px rgba(0,0,0,0.2), 
                     0 1px 2px rgba(0,0,0,0.7);
 }
-
 
 //-------//
 // Emoji //
